
2008年 04月 25日 星期五 15:40:27 CST
	修正好友列表排序，现在离线状态，忙碌状态的都可以排在下面了。
	添加接收来自进入聊天室的邀请。修正聊天室里成员的更新，添加及删除。

2008年 04月 24日 星期四 17:17:19 CST
	给聊天室成员添加角色图标

2008年 04月 23日 星期三 17:02:43 CST
	改正C++代码方面的一些方面，主要是引用的使用问题。
	给好友添加类型设置处理窗口。

2008年 03月 11日 星期二 15:39:14 CST lerosua
	实现了TreeView的TreeModelFilter功能。在主界面上加了一个输入框，
	用于过滤关键字，以显示匹配的好友成员。

2008年 03月 09日 星期日 14:56:42 CST lerosua
	改写了菜单的生成方式，在Maindow类里，直接用xml的方式生成，菜单全在action_group里
	方便调用。去除了TalkMenu类。
	菜单中的图标还有些问题。是注册StockID的问题。翻译还没更进。
	在TalkCard类中，handleVCard函数的VCard参数设置成了const,
	主要是为了适应svn的gloox的3664版本。

2008年 02月 28日 星期四 16:13:55 CST lerosua
	文件传输中的接收初步测试成功。下一步是测试发送。
2008年 02月 23日 星期六 09:50:47 CST lerosua
	更新聊天室中成员的数据结构组成
	gloox 1.0alpha2 里对于聊天室里成员的presence信息有BUG。迟点实现这个吧
2008年 02月 21日 星期四 17:04:30 CST lerosua
	更新了服务发掘的模板。替换了一些图标。
	改变了聊天窗口的而已。变成MSN一样右边列出图标的模式。
	还需要改善。
2008年 02月 21日 星期四 00:45:45 CST lerosua
	给TalkFT添加了接收线程。
2008年 02月 20日 星期三 15:45:13 CST lerosua
	更新TalkFT类到gloox 1.0系列
	
2008年 01月 23日 星期三 14:36:48 CST lerosua
	目前版本要配合gloox 1.0alpha 以上版本编译

2008-01-23  yetist  <yetist@gmail.com>

	* autogen.sh: 使用gnome-autogen.sh来做自动检测。

2008年 01月 19日 星期六 23:33:28 CST lerosua
	添加libjingle目录，准备将代码为转移到gloox 1.0alpha中。
	将要先去掉IBB（带内数据传输的代码）


2007年10月10日 星期三 11时38分18秒 lerosua
	
	有个bug, 就是发送给离线的人的消息的时候，再关闭窗口就
	容易崩溃。因为关闭窗口就会删除会话。而会话中的一些后台
	进程却未必已经完成。比如，已经发送了信号通知对方打字停止，
	但在这时关闭窗口会马上删除会话，而后台中gloox才刚准备发送
	信号，而会话已经没了，这时候就崩溃了。看来关闭会话的时机不好
	，得掌握着重实现一下。现在只能把发送信号的所有函数去掉以暂时
	屏蔽这个BUG。

	那就不应该关闭窗口就关闭会话，但时机在哪呢？看来应该是同步的
	问题啊。


2007-08-27  yetist  <yetist@gmail.com>

    * doc/Makefile.am configure.in Makefile.am autogen.sh:
    some changes.

    * data/images/Makefile.am:
    * data/italk.desktop.in.in:
    * data/Makefile.am:
    add desktop file, so we can run italk from main menu.

    * src/about.h:
    * src/MainWindow.h:
    * src/MsgWindow.h:
    * src/Bodies.cpp:
    * src/MainWindow.cpp:
    * data/ui/Makefile.am:
    * data/ui/login_window.xml:
    * data/ui/about.xml:
    * data/ui/main_window.xml:
    * data/ui/msg_window.xml: