@@ -1,4 +1,10 @@
 
+2008年 04月 26日 星期六 15:03:15 CST
+	改进好友图标的获取，及时更新好友的新图标以及避免生成重复的图标。
+	不保存好友的Vcard信息。因为在gloox 1.0-beta2看来，vcard信息似乎
+	仍有莫名的BUG，暂时将它置于一边，只获取其中的图标即可。
+	修正好友类型自动检测的BUG。
+
 2008年 04月 25日 星期五 15:40:27 CST
 	修正好友列表排序，现在离线状态，忙碌状态的都可以排在下面了。
 	添加接收来自进入聊天室的邀请。修正聊天室里成员的更新，添加及删除。
